<resources>
    <string name="app_name">Project-2-Student</string>


    <string name="SchoolName">Al-Saada High School</string>

    //Login Activity
    <string name="LOGIN">LOGIN</string>
    <string name="USERNAME">UserName</string>
    <string name="PASSWORD">Password</string>
    <string name="FORGOT_PASSWORD">Forgot Password</string>


    //Main Parent
    <string name="MAIN_GENERALNOTE">General Notes</string>
    <string name="MAIN_SPECIALNOTE">Special Notes</string>
    <string name="MAIN_MARKNOTES">Mark Notes</string>
    <string name="MAIN_SEND_NOTE_TO_THE_INSTRUCTOR">Send Message</string>
    <string name="MAIN_FINAL_RESULT">Final Result</string>
    <string name="MAIN_CALENDER">Calender</string>
    <string name="CreativityText">Creativity School</string>

    //Menu
    <string name="HOME_TEXT">Home</string>
    <string name="PERSONAL_PROFILE">Personal Profile</string>
    <string name="About_Us">About Us</string>
    <string name="SETTINGS">Settings</string>
    <string name="LOGOUT">Logout</string>
    <string name="HONORARY_BOARD">Honorary Board</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>

    //Special Note and General Note
    <string name="EXPIRED_DATE">Expired date:</string>
    <string name="SINCE_WHEN"> Since when </string>
    <string name="RECEIVE_DATE">Receive Date </string>

    <string name="MARKS">Marks</string>

    //Send Message
    <string name="WRITE_THE_MESSAGE">Write the message pleas </string>
    <string name="WELCOM_TEXT">You can in this activity write anything you want the instructor to read it
    if you have any complaint or advice please leave it in the bottom and send it and we will read it with pleasure.</string>
    <string name="absence_warning">Absence warning</string>
    //contact us

    <string name="ABSENCE_WARNING">Absence Warning</string>
    <string name="CONTUCT_US">Contact US</string>
    <string name="GALLERY_IMAGE">Gallery Image</string>
    <string name="WEEK_PROGRAM">Week Program</string>
    <string name="facebook"><u><a href="https://www.facebook.com/Alsaade.private.School">  our facebook site </a></u></string>
    <string name="twitter"><u><a href="https://twitter.com/saadeschool"> our twitter site </a></u></string>
    <string name="website"><u><a href="https://www.saadeschool.com/ar/index.php"> go to website </a></u></string>

    <string name="aboutus"><i>The beginning of the road was in the year one thousand nine hundred and fifty when Sheikh Abdul Ghani Al-Daqer - may God have mercy on him - established Al-Saada High School, based on the belief that science is the path that leads to human happiness and advancement. At that time, and in the year one thousand nine hundred and sixty-two, the secondary school moved to its current location in the Qanawat area, and it was supervised by Professor Farouk Al-Tabbaa.

With the advent of the year one thousand nine hundred and seventy-three, the administration of the high school passed to Professor Hisham Al-Nashef - may God have mercy on him - where it was receiving students wishing to repeat the general secondary school to obtain a higher rate, and then it soon received the students of the scientific branch who wished to study the general secondary school, all of them with different conditions.

Mr. Hisham - may God have mercy on him - continued his diligent work to develop the work in the secondary school, as he provided it with a staff of teaching, administrative and educational staff of the finest specialists.

Mr. Hisham Al-Nashef spent most of his time in order to promote Al-Saada High School. He was the teacher, the father of his students, and the mentor brother to his fellow teachers from the school family, making the high school family an example in working relationships based on love and mutual respect, and adopting high work values ​​based on loyalty and trust. Indeed, a good example to be followed in education and instilling virtuous values ​​and morals.

Thus, Al-Saada High School proceeded to the year two thousand and three, when God Almighty - the Almighty - wished to choose Professor Hisham next to him, so we left a shining star after a journey full of giving that will be remembered by everyone who entered Al-Saada High School as a student or teacher, and who worked in the field of teaching.

So the school administration turned to his son, Mr. Ammar Al-Nashef, to complete the road and follow up on the mission, so he carried out a comprehensive restoration that included the school building and the rehabilitation and renewal of the administrative and educational team.

 As for the building, it was carefully restored and its original Arabic Damascene character, splendor, and decoration was restored to it. and pedagogical

Methods of educational follow-up and communication with students and their parents have also been developed to be based on modern technology.

This continuous effort has resulted in graduating elites of outstanding students, for whom Al-Saada High School had the largest share at the country level. During the past ten years, the secondary school was able to obtain the first places at the level of Damascus governorate and at the level of Syria, both in the number of successes, or in the percentage of those who obtained averages It exceeds the number of high school students, or the number of students in general.

Today, Al-Saada High School seeks, as it always has, to develop its educational, administrative and pedagogical methods of work by adopting continuous rehabilitation and providing its teaching staff with the latest developments in education, especially after the Ministry of Education approved the new curricula and new methods of teaching.



Finally..

The family of work at Al-Saada High School believes that educational work is a message with high purposes, with great goals. Therefore, all of its members work collaboratively and according to a clear unified vision to achieve the goals by building a generation armed with morals and knowledge and to walk the path of building the human being that the ancestor of our nation walked in the eras of progress and prosperity. </i></string>
    <string name="gallery">Gallery</string>
    <string name="retry">retry</string>
    <string name="title">Title</string>
    <string name="expired_date">EXPIRED DATE :</string>
    <string name="date">date</string>
    <string name="start_date">Start Date :</string>
</resources>