<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/Lgary"
    android:id="@+id/main_nav_drawer">


    <ImageView
        android:id="@+id/main_nav_drawer_iv"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        android:onClick="ClickLogo"
        android:src="@drawable/logo_no_background"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/main_nav_drawer_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SchoolName"
        android:textStyle="bold|italic"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColor="@color/DarkMagenta"/>

    <View
        android:id="@+id/main_nav_drawer_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/DarkMagenta"/>

    <LinearLayout
        android:id="@+id/main_nav_drawer_ll_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="ClickHome"
        >

        <TextView
            android:id="@+id/main_nav_drawer_ll_home_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/HOME_TEXT"
            android:padding="12dp"
            android:textStyle="bold|italic"
            android:textSize="23sp"
            android:textColor="@color/DarkMagenta"
            android:layout_marginStart="16dp"/>

        <ImageView
            android:id="@+id/main_nav_drawer_ll_home_iv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="48dp"
            android:src="@drawable/ic_home"/>

        <!--  app:tint="@color/DarkMagenta"-->

    </LinearLayout>


    <LinearLayout
        android:id="@+id/main_nav_drawer_ll_personal_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="ClickPersonalProfile"

        >
        <!-- android:onClick="ClickDashBoard"-->

        <TextView
            android:id="@+id/main_nav_drawer_ll_personal_profile_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/PERSONAL_PROFILE"
            android:padding="12dp"
            android:textStyle="bold|italic"
            android:textSize="23sp"
            android:textColor="@color/DarkMagenta"
            android:layout_marginStart="16dp"/>

        <ImageView
            android:id="@+id/main_nav_drawer_ll_personal_profile_iv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="48dp"
            android:src="@drawable/ic_profile"/>


        <!--  app:tint="@color/DarkMagenta"-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_nav_drawer_ll_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"

        >

        <!-- android:onClick="ClickSettings"-->

        <TextView
            android:id="@+id/main_nav_drawer_ll_settings_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/SETTINGS"
            android:textStyle="bold|italic"
            android:textSize="23sp"
            android:textColor="@color/DarkMagenta"
            android:padding="12dp"
            android:layout_marginStart="16dp"/>

        <ImageView
            android:id="@+id/main_nav_drawer_ll_settings_iv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="48dp"
            android:src="@drawable/ic_settings"/>
        <!--  app:tint="@color/DarkMagenta"-->


    </LinearLayout>


    <LinearLayout
        android:id="@+id/main_nav_drawer_ll_honorary_board"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="ClickContactUs"
        >

        <!-- android:onClick="ClickHonoraryBoard"-->

        <TextView
            android:id="@+id/main_nav_drawer_ll_honorary_board_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Contact us"
            android:textSize="23sp"
            android:padding="12dp"
            android:textColor="@color/DarkMagenta"
            android:textStyle="bold"
            android:layout_marginStart="16dp"/>

        <ImageView
            android:id="@+id/main_nav_drawer_ll_honorary_board_iv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="48dp"
            android:src="@drawable/ic_phone_contuct"/>

        <!--  app:tint="@color/DarkMagenta"-->

    </LinearLayout>



    <LinearLayout
        android:id="@+id/main_nav_drawer_ll_about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="ClickAboutUs"
        >

        <TextView
            android:id="@+id/main_nav_drawer_ll_about_us_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/About_Us"
            android:padding="12dp"
            android:textStyle="bold|italic"
            android:textSize="23dp"
            android:textColor="@color/DarkMagenta"
            android:layout_marginStart="16dp"/>

        <ImageView
            android:id="@+id/main_nav_drawer_ll_about_us_iv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="48dp"
            android:src="@drawable/ic_information_svgrepo_com"/>


        <!--  app:tint="@color/DarkMagenta"-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_nav_drawer_ll_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="ClickGallery"
        tools:ignore="UsingOnClickInXml">

        <TextView
            android:id="@+id/main_nav_drawer_ll_gallery_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gallery"
            android:textSize="23sp"
            android:padding="12dp"
            android:textColor="@color/DarkMagenta"
            android:textStyle="bold"
            android:layout_marginStart="16dp"/>

        <ImageView
            android:id="@+id/main_nav_drawer_ll_gallery_iv"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="48dp"
            android:src="@drawable/ic_gallery"/>

        <!--  app:tint="@color/DarkMagenta"-->

    </LinearLayout>




    <LinearLayout
        android:id="@+id/main_nav_drawer_ll_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="ClickLogOut"
        tools:ignore="UsingOnClickInXml">

        <TextView
            android:id="@+id/main_nav_drawer_ll_logout_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LOGOUT"
            android:textStyle="bold|italic"
            android:textSize="23dp"
            android:textColor="@color/DarkMagenta"
            android:padding="12dp"
            android:layout_marginStart="16dp"/>

        <ImageView
            android:id="@+id/main_nav_drawer_ll_logout_iv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="48dp"
            android:src="@drawable/ic_logout"/>

        <!--  app:tint="@color/DarkMagenta"-->

    </LinearLayout>

</LinearLayout>