<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".View.LoginActivity">


    <RelativeLayout
        android:id="@+id/login_rl_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/login_rl_logo_iv"
            android:layout_width="match_parent"
            android:layout_height="199dp"
            android:src="@drawable/ic_logosvg" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/login_rl_2_left_bg"
        android:layout_width="220dp"
        android:layout_height="480dp"
        android:gravity="center_vertical"
        android:layout_marginTop="-40dp"
        app:layout_constraintTop_toBottomOf="@+id/login_rl_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/login_left_side" >

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_panel_ll_1"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:background="@drawable/login_shape_panel"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="70dp"
        android:paddingRight="50dp"
        app:layout_constraintTop_toBottomOf="@+id/login_rl_logo"
       >

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/DarkMagenta"
            app:startIconDrawable="@android:drawable/sym_action_email"
            app:startIconTint="@color/DarkMagenta"
            android:hint="@string/USERNAME"
            app:hintTextColor="@color/DarkMagenta"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_ll_1_et_email"
                android:layout_width="match_parent"
                android:textColor="@color/DarkMagenta"
                android:textColorHint="@color/DarkMagenta"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/DarkMagenta"
            app:startIconDrawable="@android:drawable/ic_lock_idle_lock"
            app:startIconTint="@color/DarkMagenta"
            app:passwordToggleEnabled="true"
            android:textColorHint="@color/DarkMagenta"
            android:hint="@string/PASSWORD"
            app:passwordToggleTint="@color/DarkMagenta"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_ll_1_et_2_password"
                android:layout_width="match_parent"
                android:textColor="@color/DarkMagenta"
                android:textColorHint="@color/DarkMagenta"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!--
        <EditText
            android:id="@+id/login_ll_1_et_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/login_edit_text_sides"
            android:drawableStart="@android:drawable/sym_action_email"
            android:drawablePadding="10dp"
            android:hint="@string/USERNAME"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black" />-->
<!--
        <EditText
            android:id="@+id/login_ll_1_et_2_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColor="@color/black"
            android:background="@drawable/login_edit_text_sides"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:drawablePadding="12dp"
            android:hint="@string/PASSWORD"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />    -->

        <ProgressBar
            android:id="@+id/progress_login"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/_5sdp"
            android:visibility="invisible"
            android:indeterminateTint="@color/DarkMagenta"
            android:progress="10" />
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/Login_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/MediumVioletRed"
        android:text="@string/LOGIN"
        android:textColor="@color/LemonChiffon"
        app:layout_constraintBottom_toBottomOf="@+id/login_panel_ll_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-29dp"
        android:gravity="start"
        android:text="@string/LOGIN"
        android:textColor="@color/LemonChiffon"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@+id/login_panel_ll_1"
        tools:layout_editor_absoluteX="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>